[package]
name = "libpasst"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2"
mio = { version = "0.8", features = ["os-poll", "net"] }
pnet = "0.35.0"
tokio = { version = "1.38.0", features = ["full"] }
nix = { version = "0.30", features = ["event", "socket"]}
log = "0.4"
dhcproto = "0.14.0"
