[package]
name = "passt"
version = "0.1.0"
edition = "2021"

[dependencies]
libpasst = { path = "../lib" }
libc = "0.2"
tokio = { version = "1.38.0", features = ["full"] }
nix = { version = "0.30", features = ["event", "socket"]}
pnet = "0.35.0"
log = "0.4"
mio = { version = "0.8", features = ["os-poll", "net"] }
clap = { version = "4", features = ["derive"] }
